tests/passing/const_var.db
const var name = "Luke"!
name.pop()!
name.pop()!
