tests/failing/infinite_lifetime.db
const const name<Infinity> = "Luke"! //lasts forever